--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="delete_button">Delete button</string>
+    <string name="what_s_in_your_mind">What\'s in your mind?</string>
 </resources>
